--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1"
   },
