--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^8.2.5",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
     "node-notifier": "^8.0.1",
