--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^7.1.2",
+    "chart.js": "^2.9.4",
     "firebase": "^8.2.5",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
@@ -14,6 +15,7 @@
     "object-path": "^0.11.5",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
