--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.2",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
