--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "start": "BROWSER=none react-scripts start",
     "dev": "npm start",
-    "e2e": "cypress open",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "test:watch": "jest --coverage --watchAll",
