--- a/package.json
+++ b/package.json
@@ -70,12 +70,14 @@
     ]
   },
   "devDependencies": {
+    "@types/chance": "^1.1.3",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "chance": "^1.1.7",
     "cypress": "^8.0.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
