--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^17.0.14",
     "chart.js": "^2.9.4",
     "firebase": "^8.2.5",
+    "firebase-admin": "^9.11.0",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
     "node-notifier": "^8.0.1",
