--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1",
+    "timeago.js": "^4.0.2",
     "typescript": "^4.1.3"
   },
   "scripts": {
